# osint_mcp_experiment

./: .gitignore  README.md  pyproject.toml
data/input/: osm_input.py
data/models/: llm_ontology_output.py  mcp_models.py
data/models/ontology/: base_stix.py  event_ontology.py  identity_ontology.py  location_ontology.py  ontology_description.py  relationship_ontology.py  tools_ontology.py
data/service/: google_news_client.py  osm_client.py
data/storage/: osint_google_news_db.py
llm/: llm_event_extractor.py
llm/service/: openai_client.py
src/osint_assistant/backend_handling/layers/: ontology_mapping.py
src/osint_assistant/tools/: utils.py
src/osint_assistant/tools/overpass/: overpass_mcp_server.py  overpass_struct_tool.py  overpass_tool.py  overpass_tool_server.py
src/test/: test_query_region.py
