[tool.poetry]
name = "osint_mcp_experiment"
version = "0.1.0"
description = ""
authors = ["Sven STEINBAUER"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

langchain = "*"
langgraph = "*"
langchain-community = "*"
langchain-experimental = "*"
langchain-mcp-adapters = "*"
langchain-google-genai = "*"
langchain-openai = "*"
langgraph-checkpoint-postgres = "*"
llama-cpp-python = "*"
google-genai = "*"
h3 = "*"
chromadb = "*"
faiss-cpu = "*"
transformers = "*"
sentence-transformers = "*"
accelerate = "*"
plotly = "*"
dash = "*"
dash-bootstrap-components = "*"
dash-trich-components = "*"
python-dotenv = "*"
llama-index = "*"
openai = "*"
jupyter = "*"
spacy = "*"
mcp = "*"
shapely = "*"
geopandas = "*"
scann = "*"
scikit-learn = "*"
scipy = "*"
nltk = "*"
opencv-python = "*"
pdfplumber = "*"
pytesseract = "*"
pdf2image = "*"
pgvector = "*"
psycopg = ">=3.0"
psycopg-binary = "*"
psycopg-pool = "*"
rank-bm25 = "*"
unstructured = "*"
PyMuPDF = "*"
pandas = "*"
ragas = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
