[tool.poetry]
name = "osint_mcp_experiment"
version = "0.1.0"
description = ""
authors = ["Sven STEINBAUER"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# LangChain / LLM
langgraph = "*"
langgraph-checkpoint-postgres = "*"
langchain-mcp-adapters = "*"
langchain-google-genai = "*"
langchain-openai = "*"
google-genai = "*"
llama-cpp-python = "*"

# Google / APIs
google-api-python-client = "*"

# Vector / ML
faiss-cpu = "*"
chromadb = "*"
sentence-transformers = "*"
transformers = "*"
accelerate = "*"
scikit-learn = "*"
scipy = "*"
nltk = "*"
ragas = "*"

# Geospatial
h3 = "*"
shapely = "*"
geopandas = "*"
scann = "*"

# Vision / Docs
opencv-python = "*"
pdfplumber = "*"
pytesseract = "*"
pdf2image = "*"
PyMuPDF = "*"
unstructured = "*"

# Data / UI
pandas = "*"
plotly = "*"
dash = "*"
dash-bootstrap-components = "*"
dash-trich-components = "*"
jupyter = "*"
python-dotenv = "*"

# Others
spacy = "*"
mcp = "*"
rank-bm25 = "*"

# PostgreSQL (CORRECT, v3)
psycopg = { version = "^3.1", extras = ["binary"] }
psycopg-pool = "^3.1"
pgvector = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
